<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSUMB HydroInfo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="App">HydroInfo Mobile Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="Exit">Quit</string>
    <string name="BackButton">Back</string>
    <string name="title_activity_stable_array_adapter">StableArrayAdapter</string>
    <string name="table_format">Table Format</string>
    <string name="title_activity_graph_view_object">GraphViewObject</string>
    <string name="title_activity_multiple_line_graph_object">MultipleLineGraphObject</string>
    <string name="title_activity_record_detail">RecordDetailActivity</string>

</resources>
